syntax = "proto3";
package com.crazymakercircle.im.common.bean.msg;
message ProtoMsg {


  enum HeadType {
    LOGIN_REQUEST = 0;
    LOGIN_RESPONSE = 1;
    LOGOUT_REQUEST = 2;
    LOGOUT_RESPONSE = 3;
    KEEPALIVE_REQUEST = 4;
    KEEPALIVE_RESPONSE = 5;
    MESSAGE_REQUEST = 6;
    MESSAGE_RESPONSE = 7;
    MESSAGE_NOTIFICATION = 8;
  }


  message LoginRequest {
    string uid = 1; //用户的唯一ID
    string deviceId = 2; //设备ID
    string token = 3; //用户token
    uint32 platform = 4; //客户端平台win/mac/ios/android/web...
    string app_version = 5; //APP版本号
  }

  message LoginResponse {
    bool result = 1;
    uint32 code = 2;
    string info = 3;
    uint32 expose = 4;
  }


  message MessageRequest {
    uint64 msg_id = 1;
    string from = 2;
    string to = 3;
    uint64 time = 4;
    uint32 msg_type = 5;
    string content = 6;
    string url = 8;
    string property = 9;
    string from_nick = 10;
    string json = 11;
  }


  message MessageResponse {
    bool result = 1; //发送成功?true:false
    uint32 code = 2; //错误码
    string info = 3; //错误描述
    uint32 expose = 4; //是否将错误展示给用户
    bool last_block = 5; //是都最后的应答
    fixed32 block_index = 6; //应答的序号
  }


  message MessageNotification {
    uint32 msg_type = 1;
    bytes sender = 2;
    string json = 3;
    string timestamp = 4;
  }


  message Message {
    HeadType type = 1; //消息类型
    uint64 sequence = 2; //序列号
    string session_id = 3; //会话ID
    LoginRequest loginRequest = 4; //登录请求
    LoginResponse loginResponse = 5; //登录响应
    MessageRequest messageRequest = 6; //聊天请求
    MessageResponse messageResponse = 7; //聊天响应
    MessageNotification notification = 8; //通知消息
  }
}